--- a/03_indicators.Rmd
+++ b/03_indicators.Rmd
@@ -12,14 +12,13 @@ suppressPackageStartupMessages(library(psych))
 suppressPackageStartupMessages(library(matrixStats))
 ```
 
-
 # reading dataset
 ```{r}
 dat_processed <- read_csv("data/data_processed.csv")
 ```
 
-
 # computing between-strategy variability
+
 ```{r}
 dat_processed <- dat_processed %>% 
   mutate(between_strategy_sd = rowSds(as.matrix(.[21:26]))) %>% 
@@ -33,8 +32,8 @@ dat_processed <- dat_processed %>%
 # columns are indexed by number — might change later
 ```
 
-
 # computing within-strategy-variability
+
 ```{r}
 # for each strategy
 dat_processed <- dat_processed %>%
@@ -58,8 +57,8 @@ dat_processed <- dat_processed %>%
 # ha sok a 0, akkor mi lesz a between-strategy sd átlaggal? nagyon lecsökken
 ```
 
-
 # computing average strategy-endorsement
+
 ```{r}
 dat_processed <- dat_processed %>%
   mutate(average_beep_endorsement = rowMeans(select(., c("regu_distraction", "regu_reflection", "regu_reappraisal", "regu_rumination", "regu_socialshare", "regu_suppression"))))
@@ -69,5 +68,15 @@ dat_processed <- dat_processed %>%
   mutate(average_overall_endorsement = mean(average_beep_endorsement, na.rm = TRUE)) %>% 
   ungroup() %>% 
   select(id:average_within_strategy_sd, average_beep_endorsement, average_overall_endorsement, everything())
+```
+
+
+```{r}
+dat_processed %>% 
+  select(id, rumination_sd) %>% 
+  distinct() %>% 
+  filter(rumination_sd > 0) %>% 
+  ggplot(aes(x = rumination_sd)) + 
+  geom_histogram()
 ```
 
