--- a/05_models.Rmd
+++ b/05_models.Rmd
@@ -3,6 +3,19 @@ title: "05_models"
 output: html_notebook
 ---
 
+# About AIC and BIC:
+
+## It seems the "difference of 2" rule of thumb is valid, based on these couple of descriptions I found. So essentially, if a model is 2 AIC units lower than the other, it is considered significantly better.
+https://www.scribbr.com/statistics/akaike-information-criterion/
+https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118856406.app5
+https://towardsdatascience.com/introduction-to-aic-akaike-information-criterion-9c9ba1c96ced
+https://machinelearningmastery.com/probabilistic-model-selection-measures/
+
+## The difference between them (very simply put): AIC is best for prediction, while BIC is best for explanation. Also, BIC penalizes free parameters more strongly.
+https://stats.stackexchange.com/questions/577/is-there-any-reason-to-prefer-the-aic-or-bic-over-the-other
+
+
+
 # loading packages
 ```{r}
 suppressPackageStartupMessages(library(tidyverse))
