--- a/04_models.Rmd
+++ b/04_models.Rmd
@@ -26,6 +26,12 @@ suppressPackageStartupMessages(library(matrixStats))
 suppressPackageStartupMessages(library(performance))
 suppressPackageStartupMessages(library(lmerTest))
 suppressPackageStartupMessages(library(nortest))
+suppressPackageStartupMessages(library(extrafont))
+suppressPackageStartupMessages(library(car))
+
+loadfonts(device = "all")
+font_add(family = "Cooper Hewitt", regular = "CooperHewitt-Medium.otf")
+showtext_auto()
 
 options(scipen = 999)
 ```
@@ -49,79 +55,84 @@ summary(baseline_model)
 tab_model(baseline_model, show.std = T)
 AIC(baseline_model)
 BIC(baseline_model)
-# check_model(baseline_model)
+check_collinearity(baseline_model)
+check_model(baseline_model)
 plot_model(baseline_model, type = "diag")
+plot_model(baseline_model, type = "eff")
 
 # normality test for residuals
 baseline_model_residuals <- residuals(baseline_model)
 lillie.test(baseline_model_residuals)
+
+# normality test for NA_sum
+lillie.test(dat_model$NA_sum)
 ```
 
 
 # baseline model with log10-transformed NA
 ```{r paged.print=FALSE}
-baseline_model_NA_log <-
-  
-  lmer(NA_sum_log ~ age + gender + beep + day + 
-      event_unpleasantness_centered +
-      (event_unpleasantness_centered | id), data = dat_model)
-
-summary(baseline_model_NA_log)
-tab_model(baseline_model_NA_log, show.std = T)
-AIC(baseline_model_NA_log)
-BIC(baseline_model_NA_log)
-# check_model(baseline_model_NA_log)
-plot_model(baseline_model_NA_log, type = "diag")
-
-
-# normality test for residuals
-baseline_model_NA_log_residuals <- residuals(baseline_model_NA_log)
-lillie.test(baseline_model_NA_log_residuals)
+# baseline_model_NA_log <-
+#   
+#   lmer(NA_sum_log ~ age + gender + beep + day + 
+#       event_unpleasantness_centered +
+#       (event_unpleasantness_centered | id), data = dat_model)
+# 
+# summary(baseline_model_NA_log)
+# tab_model(baseline_model_NA_log, show.std = T)
+# AIC(baseline_model_NA_log)
+# BIC(baseline_model_NA_log)
+# # check_model(baseline_model_NA_log)
+# plot_model(baseline_model_NA_log, type = "diag")
+# 
+# 
+# # normality test for residuals
+# baseline_model_NA_log_residuals <- residuals(baseline_model_NA_log)
+# lillie.test(baseline_model_NA_log_residuals)
 ```
 
 
 # trait rumination
 ```{r}
-trait_model <-
-  
-  lmer(NA_sum ~ age + gender + beep + day + 
-      event_unpleasantness_centered * trait_rumination + 
-      (event_unpleasantness_centered | id), data = dat_model)
-
-tab_model(trait_model, show.std = T)
-AIC(trait_model)
-BIC(trait_model)
-# check_model(trait_model)
+# trait_model <-
+#   
+#   lmer(NA_sum ~ age + gender + beep + day + 
+#       event_unpleasantness_centered * trait_rumination + 
+#       (event_unpleasantness_centered | id), data = dat_model)
+# 
+# tab_model(trait_model, show.std = T)
+# AIC(trait_model)
+# BIC(trait_model)
+# # check_model(trait_model)
 ```
 
 
 # mean state rumination
 ```{r}
-mean_state_model <-
-  
-  lmer(NA_sum ~ age + gender + beep + day + 
-      event_unpleasantness_centered * mean_state_rumi_grand_centered + 
-      (event_unpleasantness_centered | id), data = dat_model)
-
-tab_model(mean_state_model, show.std = T)
-AIC(mean_state_model)
-BIC(mean_state_model)
-# check_model(mean_state_model)
+# mean_state_model <-
+#   
+#   lmer(NA_sum ~ age + gender + beep + day + 
+#       event_unpleasantness_centered * mean_state_rumi_grand_centered + 
+#       (event_unpleasantness_centered | id), data = dat_model)
+# 
+# tab_model(mean_state_model, show.std = T)
+# AIC(mean_state_model)
+# BIC(mean_state_model)
+# # check_model(mean_state_model)
 ```
 
 
 # state rumination
 ```{r}
-state_model <-
-  
-  lmer(NA_sum ~ age + gender + beep + day + 
-      event_unpleasantness_centered * rumination_centered + 
-      (event_unpleasantness_centered * rumination_centered | id), data = dat_model)
-
-tab_model(baseline_model, trait_model, mean_state, state_model, show.std = T)
-AIC(state_model)
-BIC(state_model)
-# check_model(state_model)
+# state_model <-
+#   
+#   lmer(NA_sum ~ age + gender + beep + day + 
+#       event_unpleasantness_centered * rumination_centered + 
+#       (event_unpleasantness_centered * rumination_centered | id), data = dat_model)
+# 
+# tab_model(baseline_model, trait_model, mean_state, state_model, show.std = T)
+# AIC(state_model)
+# BIC(state_model)
+# # check_model(state_model)
 ```
 
 
@@ -129,39 +140,141 @@ BIC(state_model)
 ```{r}
 full_model <-
   
-  lmer(NA_sum ~ age + gender + beep + day + 
-      event_unpleasantness_centered * rumination_centered + 
-      event_unpleasantness_centered * trait_rumination +
+  lmer(NA_sum ~ age + gender + beep + day +
+      event_unpleasantness_centered * rumination_centered +  
       event_unpleasantness_centered * mean_state_rumi_grand_centered +
+      event_unpleasantness_centered * trait_rumination +
+      
       (event_unpleasantness_centered * rumination_centered | id), data = dat_model,
       control = lmerControl(optCtrl=list(ftol_abs=1e-8,xtol_abs=1e-8))
   )
 
 tab_model(full_model, show.std = T)
 summary(full_model)
-plot_model(full_model, type = "diag")
-plot_model(full_model)
+# plot_model(full_model, type = "eff")
+plot_model(full_model, rm.terms = c("age", "gender [Male]", "gender [Other]", "beep", "day", "event_unpleasantness_centered"), ci.lvl=0.95)
 AIC(full_model)
 BIC(full_model)
+
+# checking assumptions
+plot_model(full_model, type = "diag")
+```
+
+
+# coefplots for full model
+```{r}
+# plot for interactions (colored afterwards in photoshop)
+plot_model(full_model,
+           type = "std",
+           rm.terms = c("rumination_centered", "trait_rumination", "mean_state_rumi_grand_centered", "age", "gender [Male]", "gender [Other]", "beep", "day", "event_unpleasantness_centered"),
+           ci.lvl = 0.95,
+           std.est = T,
+           title = "",
+           show.values = TRUE,
+           colors = "black",
+           value.size = 4,
+           dot.size = 3,
+           line.size = 1.2,
+           axis.labels = c("Trait rumination * Perceived stress", "Mean state rumination * Perceived stress", "State rumination * Perceived stress"),
+           axis.title = "Standardized β coefficients"
+           ) +
+           ylim(0, 0.1) +
+           theme_minimal() +
+           theme(axis.text = element_text(size = 10, color = "black"),
+                 axis.title.x = element_text(size = 12, color = "black"),
+                 axis.line = element_line(size = .3)
+           )
+
+# plot for main effects (colored afterwards in photoshop)
+plot_model(full_model,
+           type = "std",
+           terms = c("rumination_centered", "mean_state_rumi_grand_centered", "trait_rumination"),
+           ci.lvl = 0.95,
+           std.est = TRUE,
+           title = "",
+           show.values = TRUE,
+           colors = "black",
+           value.size = 4,
+           dot.size = 3,
+           line.size = 1.2,
+           axis.labels = c("Trait rumination", "Mean state rumination", "State rumination"),
+           axis.title = "Standardized β coefficients"
+           ) +
+           ylim(0, 1) +
+           theme_minimal() +
+           theme(axis.text = element_text(size = 10, color = "black"),
+                 axis.title.x = element_text(size = 12, color = "black"),
+                 axis.line = element_line(size = .3)
+           )
+```
+
+
+# coefplots for full model (HU)
+```{r}
+# plot for interactions (colored afterwards in photoshop)
+plot_model(full_model,
+           type = "std",
+           rm.terms = c("rumination_centered", "trait_rumination", "mean_state_rumi_grand_centered", "age", "gender [Male]", "gender [Other]", "beep", "day", "event_unpleasantness_centered"),
+           ci.lvl = 0.95,
+           std.est = T,
+           title = "",
+           show.values = TRUE,
+           colors = "black",
+           value.size = 4,
+           dot.size = 3,
+           line.size = 1.2,
+           axis.labels = c("vonás-rumináció * észlelt stressz", "átlagos állapot-rumináció * észlelt stressz", "állapot-rumináció * észlelt stressz"),
+           axis.title = "standardizált béta együtthatók"
+           ) +
+           ylim(0, 0.1) +
+           theme_minimal() +
+           theme(axis.text = element_text(size = 10, color = "black"),
+                 axis.title.x = element_text(size = 12, color = "black"),
+                 axis.line = element_line(size = .3),
+                 text = element_text(family = "Cooper Hewitt")
+           )
+
+# plot for main effects (colored afterwards in photoshop)
+plot_model(full_model,
+           type = "std",
+           terms = c("rumination_centered", "mean_state_rumi_grand_centered", "trait_rumination"),
+           ci.lvl = 0.95,
+           std.est = TRUE,
+           title = "",
+           show.values = TRUE,
+           colors = "black",
+           value.size = 4,
+           dot.size = 3,
+           line.size = 1.2,
+           axis.labels = c("vonás-rumináció", "átlagos állapot-rumináció", "állapot-rumináció"),
+           axis.title = "standardizált béta együtthatók"
+           ) +
+           ylim(0, 1) +
+           theme_minimal() +
+           theme(axis.text = element_text(size = 10, color = "black"),
+                 axis.title.x = element_text(size = 12, color = "black"),
+                 axis.line = element_line(size = .3),
+                 text = element_text(family = "Cooper Hewitt")
+           )
 ```
 
 
 # full model with log10-transformed NA
 ```{r}
-full_model_NA_log <-
-  
-  lmer(NA_sum_log ~ age + gender + beep + day + 
-      event_unpleasantness_centered * rumination_centered + 
-      event_unpleasantness_centered * trait_rumination +
-      event_unpleasantness_centered * mean_state_rumi_grand_centered +
-      (event_unpleasantness_centered * rumination_centered | id), data = dat_model
-      # control = lmerControl(optCtrl=list(ftol_abs=1e-8,xtol_abs=1e-8))
-  )
-
-tab_model(full_model_NA_log, show.std = T)
-summary(full_model_NA_log)
-plot_model(full_model_NA_log, type = "diag")
-AIC(full_model_NA_log)
-BIC(full_model_NA_log)
+# full_model_NA_log <-
+#   
+#   lmer(NA_sum_log ~ age + gender + beep + day + 
+#       event_unpleasantness_centered * rumination_centered + 
+#       event_unpleasantness_centered * trait_rumination +
+#       event_unpleasantness_centered * mean_state_rumi_grand_centered +
+#       (event_unpleasantness_centered * rumination_centered | id), data = dat_model
+#       # control = lmerControl(optCtrl=list(ftol_abs=1e-8,xtol_abs=1e-8))
+#   )
+# 
+# tab_model(full_model_NA_log, show.std = T)
+# summary(full_model_NA_log)
+# plot_model(full_model_NA_log, type = "diag")
+# AIC(full_model_NA_log)
+# BIC(full_model_NA_log)
 ```
 
